--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Minimalistic dummy-data-generator.",
   "main": "build/src/main.js",
   "types": "build/src/index.d.ts",
@@ -8,7 +8,9 @@
     "node": ">= 14.15 <15"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.5",
     "@types/jest": "~26.0.19",
+    "@types/lodash": "^4.14.168",
     "@types/node": "~14.14.20",
     "@typescript-eslint/eslint-plugin": "~4.12.0",
     "@typescript-eslint/parser": "~4.12.0",
@@ -34,7 +36,9 @@
   "author": "Aman Jain <aman.j@safepath.ai> (https://aman.wiki)",
   "license": "Apache-2.0",
   "dependencies": {
-    "fast-validator": "^1.0.3",
+    "faker": "^5.1.0",
+    "fastest-validator": "^1.9.0",
+    "lodash": "^4.17.20",
     "tslib": "~2.0.3"
   },
   "volta": {
