--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
@@ -18,9 +18,12 @@
     "noImplicitThis": false,
     "strictNullChecks": false,
     "declaration": true,
+    "esModuleInterop": true,
+
   },
   "include": [
     "src/**/*",
+    "src/**/**/*",
     "__tests__/**/*"
   ]
 }
