--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.2.1",
+  "version": "1.2.5",
   "description": "Minimalistic dummy-data-generator.",
   "main": "build/src/main.js",
-  "types": "build/src/index.d.ts",
+  "types": "build/src/main.d.ts",
   "engines": {
     "node": ">= 14.15 <15"
   },
