--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.2.5",
+  "version": "1.2.7",
   "description": "Minimalistic dummy-data-generator.",
-  "main": "build/src/main.js",
-  "types": "build/src/main.d.ts",
-  "engines": {
+    "engines": {
     "node": ">= 14.15 <15"
   },
   "devDependencies": {
@@ -25,13 +23,18 @@
     "typescript": "~4.1.3"
   },
   "scripts": {
-    "start": "node build/src/main.js",
-    "clean": "rimraf coverage build tmp",
-    "build": "tsc -p tsconfig.release.json",
-    "build:watch": "tsc -w -p tsconfig.release.json",
-    "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "build": "npm run build-ts && npm run lint",
+    "build-ts": "tsc -p tsconfig.release.json",
+    "debug": "npm run build && npm run watch-debug",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "serve": "node dist/main.js",
+    "serve-debug": "nodemon --inspect dist/main.js",
+    "start": "npm run serve",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-node": "nodemon dist/server.js",
+    "watch-test": "npm run test -- --watchAll",
+    "watch-ts": "tsc -w"
   },
   "author": "Aman Jain <aman.j@safepath.ai> (https://aman.wiki)",
   "license": "Apache-2.0",
@@ -39,6 +42,7 @@
     "faker": "^5.1.0",
     "fastest-validator": "^1.9.0",
     "lodash": "^4.17.20",
+    "ts-node": "^9.1.1",
     "tslib": "~2.0.3"
   },
   "volta": {
@@ -52,7 +56,11 @@
     "csv dummy data",
     "dummy-data-generator",
     "lorem ipsum",
-    "lorem"
+    "lorem",
+    "fake data",
+    "mocker-data-generator",
+    "mock",
+    "mock data"
   ],
   "homepage": "https://github.com/jn-aman/dummy-data-generator",
   "repository": {
