--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
     "noUnusedParameters": true,
     "noImplicitAny": false,
     "noImplicitThis": false,
-    "strictNullChecks": false,
-    "skipLibCheck": true,
-    "declaration": true,
+    "strictNullChecks": false
   },
   "include": [
     "src/**/*",
