--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.2.9",
+  "version": "1.3.5",
+  "main": "dist/index.js",
+  "types": "dist",
   "description": "Minimalistic dummy-data-generator.",
-    "engines": {
+  "engines": {
     "node": ">= 14.15 <15"
   },
   "devDependencies": {
@@ -24,7 +26,7 @@
   },
   "scripts": {
     "build": "npm run build-ts && npm run lint",
-    "build-ts": "tsc -p tsconfig.release.json",
+    "build-ts": "tsc -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "serve": "node dist/main.js",
@@ -39,6 +41,7 @@
   "author": "Aman Jain <aman.j@safepath.ai> (https://aman.wiki)",
   "license": "Apache-2.0",
   "dependencies": {
+    "@babel/node": "^7.12.10",
     "faker": "^5.1.0",
     "fastest-validator": "^1.9.0",
     "lodash": "^4.17.20",
