--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build-ts": "tsc -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "serve": "node dist/main.js",
-    "serve-debug": "nodemon --inspect dist/main.js",
+    "serve": "node dist/index.js",
+    "serve-debug": "nodemon --inspect dist/index.js",
     "start": "npm run serve",
     "test": "jest --forceExit --coverage --verbose",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
