--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "main": "dist/index.js",
   "types": "dist",
   "description": "Minimalistic dummy-data-generator.",
@@ -15,11 +15,8 @@
     "@typescript-eslint/eslint-plugin": "~4.12.0",
     "@typescript-eslint/parser": "~4.12.0",
     "eslint": "~7.17.0",
-    "eslint-config-prettier": "~7.1.0",
-    "eslint-plugin-jest": "~24.1.3",
     "jest": "~26.6.3",
     "prettier": "~2.2.1",
-    "rimraf": "~3.0.2",
     "ts-jest": "~26.4.4",
     "tsutils": "~3.18.0",
     "typescript": "~4.1.3"
@@ -43,8 +40,7 @@
   "dependencies": {
     "faker": "^5.1.0",
     "fastest-validator": "^1.9.0",
-    "lodash": "^4.17.20",
-    "tslib": "~2.0.3"
+    "lodash": "^4.17.20"
   },
   "volta": {
     "node": "14.15.0"
