--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.4.2",
+  "version": "1.6.2",
+  "description": "Minimalistic dummy-data-generator.",
   "main": "dist/index.js",
   "types": "dist",
-  "description": "Minimalistic dummy-data-generator.",
   "engines": {
     "node": ">= 14.15 <15"
   },
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "build": "npm run build-ts && npm run lint",
-    "build-ts": "tsc -p tsconfig.json",
+    "build-ts": "tsc -p .",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "serve": "node dist/index.js",
@@ -31,13 +31,13 @@
     "start": "npm run serve",
     "test": "jest --forceExit --coverage --verbose",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
     "watch-ts": "tsc -w"
   },
   "author": "Aman Jain <aman.j@safepath.ai> (https://aman.wiki)",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/node": "~14.14.20",
     "faker": "^5.1.0",
     "fastest-validator": "^1.9.0",
     "lodash": "^4.17.20"
@@ -45,7 +45,10 @@
   "volta": {
     "node": "14.15.0"
   },
-  "prepublish": "tsc -p tsconfig.release.json",
+  "files": [
+    "dist"
+  ],
+  "prepublish": "tsc -p .",
   "keywords": [
     "dummy data",
     "csv",
@@ -63,5 +66,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jn-aman/dummy-data-generator"
-  }
+  },
+  "runkitExampleFilename": "dist/runkit-example.js"
 }
