--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "description": "Minimalistic dummy-data-generator.",
   "main": "dist/index.js",
   "types": "dist",
@@ -10,7 +10,6 @@
   "devDependencies": {
     "@types/faker": "^5.1.5",
     "@types/jest": "~26.0.19",
-    "@types/lodash": "^4.14.168",
     "@types/node": "~14.14.20",
     "@typescript-eslint/eslint-plugin": "~4.12.0",
     "@typescript-eslint/parser": "~4.12.0",
@@ -40,10 +39,11 @@
   "author": "Aman Jain <aman.j@safepath.ai> (https://aman.wiki)",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/lodash.camelcase": "^4.3.6",
     "@types/node": "~14.14.20",
     "faker": "^5.1.0",
     "fastest-validator": "^1.9.0",
-    "lodash": "^4.17.20",
+    "lodash.camelcase": "^4.3.0",
     "tslib": "^2.1.0"
   },
   "volta": {
