--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.7.1",
+  "version": "1.7.2",
   "description": "Minimalistic dummy-data-generator.",
   "main": "dist/index.js",
   "types": "dist",
@@ -9,19 +9,19 @@
   },
   "devDependencies": {
     "@types/faker": "^5.1.5",
-    "@types/jest": "~26.0.19",
+    "@types/jest": "^26.0.20",
     "@types/node": "~14.14.20",
     "@typescript-eslint/eslint-plugin": "~4.12.0",
     "@typescript-eslint/parser": "~4.12.0",
     "eslint": "~7.17.0",
+    "eslint-config-prettier": "~7.1.0",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "~26.6.3",
+    "prettier": "~2.2.1",
+    "rimraf": "~3.0.2",
     "ts-jest": "~26.4.4",
     "tsutils": "~3.18.0",
-    "typescript": "~4.1.3",
-    "eslint-config-prettier": "~7.1.0",
-    "prettier": "~2.2.1",
-    "rimraf": "~3.0.2"
+    "typescript": "~4.1.3"
   },
   "scripts": {
     "build": "npm run build-ts && npm run lint",
@@ -43,7 +43,7 @@
     "@types/node": "~14.14.20",
     "faker": "^5.1.0",
     "fastest-validator": "^1.9.0",
-    "lodash.camelcase": "^4.3.0",
+    "lodash": "^4.3.0",
     "tslib": "^2.1.0"
   },
   "volta": {
