--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist",
   "engines": {
-    "node": ">= 14.15 <15"
+    "node": ">= 14.15"
   },
   "devDependencies": {
     "@types/faker": "^5.1.5",
