--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "node": ">= 14.15"
   },
   "devDependencies": {
-    "@types/faker": "^5.1.5",
-    "@types/jest": "^26.0.20",
-    "@types/node": "~14.14.20",
-    "@typescript-eslint/eslint-plugin": "~4.12.0",
-    "@typescript-eslint/parser": "~4.12.0",
-    "eslint": "~7.17.0",
-    "eslint-config-prettier": "~7.1.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "jest": "~26.6.3",
-    "prettier": "~2.2.1",
+    "@types/jest": "^28.1.5",
+    "@types/node": "~18.0.4",
+    "@typescript-eslint/eslint-plugin": "~5.30.6",
+    "@typescript-eslint/parser": "~5.30.6",
+    "eslint": "~8.19.0",
+    "eslint-config-prettier": "~8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "jest": "~28.1.3",
+    "prettier": "~2.7.1",
     "rimraf": "~3.0.2",
-    "ts-jest": "~26.4.4",
-    "tsutils": "~3.18.0",
-    "typescript": "~4.1.3"
+    "ts-jest": "~28.0.6",
+    "tsutils": "~3.21.0",
+    "typescript": "~4.7.4"
   },
   "scripts": {
     "build": "npm run build-ts && npm run lint",
@@ -39,12 +38,12 @@
   "author": "Aman Jain <aman.j@safepath.ai> (https://aman.wiki)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/lodash.camelcase": "^4.3.6",
-    "@types/node": "~14.14.20",
-    "faker": "^5.1.0",
-    "fastest-validator": "^1.9.0",
-    "lodash": "^4.3.0",
-    "tslib": "^2.1.0"
+    "@faker-js/faker": "^7.3.0",
+    "@types/lodash.camelcase": "^4.3.7",
+    "@types/node": "~18.0.4",
+    "fastest-validator": "^1.12.0",
+    "lodash": "^4.17.21",
+    "tslib": "^2.4.0"
   },
   "volta": {
     "node": "14.15.0"
