--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dummy-data-generator",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "Minimalistic dummy-data-generator.",
   "main": "dist/index.js",
   "types": "dist",
@@ -23,7 +23,7 @@
     "typescript": "~4.7.4"
   },
   "scripts": {
-    "build": "npm run build-ts && npm run lint",
+    "build": "npm run build-ts",
     "build-ts": "tsc -p .",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
